tests/snapshots/examples_fixtures/type_system__failing__32_direct_time_hof_missing_effect.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/32_direct_time_hof_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E400]: MISSING EFFECT

Call to `time` requires effect `Time` in this function signature.

  --> examples/type_system/failing/32_direct_time_hof_missing_effect.flx:4:5
  |
4 |     time(/() -> 1)
  |     ^^^^
  |     ---- effectful call occurs here

Hint:
  Add `with Time` to the enclosing function.
== stdout ==
<not executed>
